# ledger-tui

./: CMakeLists.txt  build.sh  run.sh
resources/: config.ini
src/: app.cpp  app.hpp  auth.cpp  auth.hpp  main.cpp  ui_handler.cpp  ui_handler.hpp
src/core/: entry_handler.cpp  entry_handler.hpp
src/db/: database.cpp  database.hpp  db_handler.cpp  db_handler.hpp
src/utils/: config.cpp  config.hpp  error_handler.cpp  error_handler.hpp  sha256.cpp  sha256.hpp  time.hpp
